security: Enhanced gitignore to prevent secret leaks
Added patterns to block:
- Files with SECRET, TOKEN, CREDENTIALS, PASSWORD in names
- Local config files with real values
- Certificate and key files
- Backup files that might contain secrets
- Private documentation

Prevents future accidental credential commits.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,31 @@ jspm_packages/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Security - Prevent secret leaks
+*SECRET*.txt
+*TOKEN*.txt
+*CREDENTIALS*.txt
+*PASSWORD*.txt
+*PRIVATE*.txt
+.env.*
+*.pem
+*.key
+*.p12
+*.pfx
+credentials.json
+secrets.json
+config.local.*
+
+# Local documentation with real values
+*_LOCAL.txt
+*_ACTUAL.txt
+*_REAL.txt
+SECRETS_*
+TOKENS_*
+
+# Backup files that might contain secrets
+*.backup
+*.bak
+*~
+*.swp
